web/css/compare.css
.ab-swipe-line {
  height: 100%;
  padding: 0 2px 0 2px;
  position: absolute;
  top: 0;
  width: 1px;
  background: white;
}
.ab-swipe-dragger {
  position: absolute;
  top: 50%;
  width: 30px;
  height: 30px;
  margin-top: -15px;
  left: -13px;
  border-radius: 50%;
  color: black;
  background: white;
  text-align: center;
}
.ab-swipe-line:hover {
  cursor: grabbing;
}
.ab-swipe-dragger:hover {
  transform: scale(1.2);
  cursor: pointer;
}
.ab-swipe-dragger i {
  font-size: 18px;
  margin-top: 7px;
}
.ab-swipe-line .left-label {
  left: -25px;
}
.ab-swipe-line .right-label {
  left: 13px;
}
.ab-slider-case {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  bottom: 25%;
  width: 172px;
  text-align: center;
  background: rgba(40, 40, 40, 0.85);
  color: white;
  height: 25px;
}
.ab-slider-case .input-range {
  width: 140px;
  display: inline-block;
  margin-top: 10px;
  vertical-align: top;
}
.ab-slider-case .wv-slider-label {
  display: inline-block;
  vertical-align: top;
  margin-top: 5px;
  width: 15px;
  font-size: 14px;
  text-align: center;
}

.ab-swipe-line .ab-swipe-span {
  position: absolute;
  top: 55%;
  padding: 2px;
  background: white;
  color: black;
  display: block;
  font-size: 14px;
  margin-top: -7px;
  border-radius: 3px;
  border: 1px solid black;
  cursor: default;
}

.ab-spy-span {
  position: absolute;
  background: rgba(40, 40, 40, 0.8);
  color: rgba(255, 255, 255, 0.9);
  display: block;
  font-size: 14px;
  border-radius: 3px;
  border: 1px solid black;
  padding: 2px;
  margin-left: -4px;
}

/* .ab-slider-input {
  width: 100%;
} */

